# Bank-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.en.md  README.md  api.sh  conftest.py  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python.yml
application/: bank_account.py  bank_acount_overdraft.py  booklet_account.py
domain/: domain_models.py  exceptions.py
domain/core/: domain_models.py  exceptions.py
domain/dtos/: account_statement.py  bank_account.py  booklet_account.py
domain/model/: acount_statement.py  bank_account.py  booklet_account.py
domain/service/: account_statement.py  bank_account.py  booklet_account.py
exalt-bank-account/: README.md  pyproject.toml
infrastructure/: util.py
ports/api/: account_statement_use_case.py  bank_account_overdraft_use_case.py  bank_account_use_case.py  booklet_account_use_case.py
ports/repositories/: i_account_statement.py  i_bank_account.py  i_booklet_account.py  i_transaction.py
service/: account_statement.py  bank_account.py  bank_acount_overdraft.py  booklet_account.py
src/: manage.py
src/bank_app/: apps.py  models.py  signals.py  urls.py
src/bank_app/migrations/: 0001_initial.py  0002_rename_transations_monthlystatemententity_transactions_and_more.py  (+5 more)
src/domain/dtos/: account_statement.py  (+3 more)
src/exalt_hexarch/: asgi.py  containers.py  settings.py  settings_docker_example.py  urls.py  wsgi.py
src/service/: account_statement.py  bank_account.py  bank_acount_overdraft.py  booklet_account.py
tests/: factory.py  fixtures.py
tests/api/: test_account_overdraft_endpoint.py  test_account_statement_endpoint.py  test_bank_account_endpoint.py  test_booklet_account_endpoint.py
(+58 files in other folders)
