[tool.poetry]
name = "philippe-ivan-mbarga-bank-account-v2-d17eb7b1-1904-4f5b-b6a0-462e21dea456"
version = "0.1.0"
description = ""
authors = ["masterivanic <masterivanic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^25.4.0"
django = "^5.2.10"
djangorestframework = "^3.16.1"
drf-spectacular = "^0.29.0"
dependency-injector = "^4.48.3"
django-extensions = "^4.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.11"
django-env-overrides = "^0.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pytest = "^9.0.2"
django-stubs = "^5.2.8"
factory-boy = "^3.3.3"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "exalt_hexarch.settings"
pythonpath = [".", "./src"]
testpaths = ["tests"]
